# PasswordHash

./: CMakeLists.txt
data/: passwords.txt
include/: Encrypt.h  Utils.h
src/: Encrypt.c  Utils.c  main.c
